feat: Added Shipping tracking functionality through email

--- a/src/main/resources/templates/reset-password.html
+++ b/src/main/resources/templates/reset-password.html
@@ -16,7 +16,7 @@
             Reset Password
         </a>
     </p>
-    <p>This link will expire in 1 hour for security reasons.</p>
+    <p>This link will expire in 5 minutes for security reasons.</p>
     <p>If you didn’t request this, please ignore this email or contact our support team.</p>
     <p>Best regards,<br>The Fawry Team</p>
     <hr style="border: none; border-top: 1px solid #eee;">
